// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complexity enter text and submit 1`] = `
<body
  class=""
>
  <div>
    <div
      class="results-container"
    >
      <div>
        Value: 
        209685000000
      </div>
      <button
        type="button"
      >
        Compute
      </button>
    </div>
  </div>
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`Complexity open modal 1`] = `
<body
  aria-hidden="true"
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div>
    <div
      class="results-container"
    >
      <div>
        Value: 
        Not computed yet
      </div>
      <button
        type="button"
      >
        Compute
      </button>
    </div>
  </div>
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        aria-label="Compute complex expression"
        class="ReactModal__Content ReactModal__Content--after-open"
        role="dialog"
        style="position: absolute; top: 25%; left: 50%; border: 1px solid #ccc; background: rgb(255, 255, 255); overflow: auto; border-radius: 4px; outline: none; padding: 20px; margin-right: -50%; transform: translate(-50%, -50%);"
        tabindex="-1"
      >
        <h1>
          <label
            for="complexity"
          >
            Complexity
          </label>
        </h1>
        <input
          id="complexity"
          value="0"
        />
        <button
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Complexity rendering correctly 1`] = `
<body>
  <div>
    <div
      class="results-container"
    >
      <div>
        Value: 
        Not computed yet
      </div>
      <button
        type="button"
      >
        Compute
      </button>
    </div>
  </div>
  <div
    class="ReactModalPortal"
  />
</body>
`;
